fix the off center copy

--- a/wp-content/themes/GPR Dehler/styles/stylesheets/themeStyles/_careers.scss
+++ b/wp-content/themes/GPR Dehler/styles/stylesheets/themeStyles/_careers.scss
@@ -1,5 +1,7 @@
 .careers {
   .thecontent {
+    float: none;
+
   }
   .jobs {
     h2.nojobs {
